# EsquieIO

./: .env.dev  .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py  main.py
src/esquieio/: .env.dev  __init__.py
src/esquieio/bd/: db_connection.py
src/esquieio/static_sources/: extract_csv.py
src/esquieio/utils/: .env.dev  config.py  file_utils.py
